--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         let pubTopic = document.getElementById('publishTopic');//Gloable variable
         let msgCount = 0;
          async  function connectMqtt(){
-             client= mqtt.connect('mqtt://www.sjaiedu.com:8083/mqtt', options)
+             client= mqtt.connect('mqtt://www.sjljzxaiedu.com:8083/mqtt', options)
              console.log(mqtt)
              client.on('connect',(e)=>{
                  // console.log('连接成功!');
